--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@
 
 openai-whisper
 openai
-moviepy
+moviepy==1.0.3
 yt_dlp
-os
 # torch  # Uncomment and specify version if GPU acceleration needed (e.g. torch==2.3.0+cu121)
