--- a/system/settings.json
+++ b/system/settings.json
@@ -7,6 +7,7 @@
         "transcribing_model": "",
         "accuracy_model": "",
         "user_query": "",
-        "youtube_list": []
+        "youtube_list": [],
+        "accuracy_testing": false
     }
 }
