--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ system/transcribed.json
 system/AI.json
 system/Clips.json
 system/
-.venv/
+venv/
 # (Optional) Uncomment more rules if desired
 # output/
 # system/*.json
