--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore raw video assets
 videos/
+__pycache__/
 programs/__pycache__/
 programs/setup_stage/__pycache__
 programs/core_functionality/__pycache__
@@ -10,6 +11,7 @@ system/transcribed.json
 system/AI.json
 system/Clips.json
 system/
+temp/
 venv/
 lm_studio_path.cfg
 # (Optional) Uncomment more rules if desired
