feat!: release AI Auto Clipper v2 with modular architecture, single-pass AI clipping, and full UX/runtime overhaul
This commit is a full modernization of the project from legacy script-driven flow to a structured, local-first application with setup, dashboard, validation, and production-grade engine/runtime behavior.

Core architecture
- Replace legacy `programs/*` and ad-hoc scripts with modular packages:
  - `core/` for clipping/runtime logic
  - `ui/` for setup wizard + dashboard
  - `utils/` for validation, logging, hardware/model helpers
- Consolidate startup through `main.py` and launcher scripts (`run.bat`, `run.ps1`).
- Remove deprecated entrypoints and old helper scripts (`settings.py`, `main.bat`, `run_with_venv.bat`, etc.).

Config + validation system
- Introduce structured config bundle in `config/`:
  - `config.json`
  - `hardware_profile.json`
  - `model_profile.json`
- Add strict config schema validation and normalization.
- Add UTF-8 BOM-safe config loading (`utf-8-sig`) to prevent setup failures from editor-encoded files.
- Add robust defaults and migration-safe runtime layout handling.

Setup wizard overhaul
- Build first-run guided setup with:
  - hardware detection
  - intensity profile selection
  - Ollama connectivity checks
  - model recommendation and policy checks
  - optional model auto-pull
  - output path and runtime tuning
- Enforce thinking-model policy (`>=8b`) for model quality/stability.
- Add clear setting guidance (behavior + impact) for each key option.
- Keep bridge chunk controls in setup flow (including edge segment tuning).

Dashboard + status UX improvements
- Redesign system status into clearer pipeline/queue/hardware sections.
- Add queue visibility improvements:
  - input videos waiting
  - output clips count
- Improve settings navigation and bridge-chunk submenu behavior.
- Improve info/help content to reflect real runtime behavior and terminology.

Clipping engine rewrite
- Rebuild runtime flow as:
  - download links -> 

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,17 @@
 # Ignore raw video assets
 videos/
 __pycache__/
-programs/__pycache__/
-programs/setup_stage/__pycache__
-programs/core_functionality/__pycache__
-programs/components/__pycache__
+*/__pycache__/
 output/
 input/
-system/transcribed.json
-system/AI.json
-system/Clips.json
 system/
 temp/
 venv/
 lm_studio_path.cfg
+logs/*.log
+config/*.json
+!config/.gitkeep
+!logs/.gitkeep
 # (Optional) Uncomment more rules if desired
 # output/
 # system/*.json
